# pywin32-ctypes

./: .codecov.yml  .coveragerc  .gitignore  .readthedocs.yaml  .travis.yml  CHANGELOG.txt  MANIFEST.in  README.md  README.rst  VERSION  appveyor.yml  build-requirements.txt  cp33-tox-requirements.txt  dev_requirements.txt  doc-requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox-requirements.txt  tox.ini
.github/workflows/: test.yaml  test.yml
docs/: Makefile  make.bat
docs/source/: conf.py  index.rst  mock_missing.py  pywin32.rst
docs/source/_templates/: module_template.rst
mini_pywin32/: .gitignore  _common.py  _util.py  _win32api.py  _win32cred.py  compat.py  errors.py  pywintypes.py  util.py  win32api.py  win32cred.py
mini_pywin32/tests/: test_win32api.py  test_win32cred.py
pywin32-tests/: test_pywintypes.py
scripts/: appveyor-install.cmd  appveyor-test.cmd  run_tests_wine.sh  setup_tests_wine.sh
win32ctypes/: VERSION  __init__.py  _common.py  _util.py  _win32api.py  _win32cred.py  _winerrors.py  compat.py  constants.py  pywintypes.py  win32api.py  win32cred.py
win32ctypes/core/: __init__.py  compat.py
win32ctypes/core/cffi/: __init__.py  _advapi32.py  _authentication.py  _cdefinitions.py  _common.py  _dll.py  _kernel32.py  _nl_support.py  _resource.py  _system_information.py  _util.py  _winbase.py
win32ctypes/pywin32/: __init__.py  _constants.py  pywintypes.py  win32api.py  win32cred.py
win32ctypes/tests/: __init__.py  compat.py  test_authentication.py  test_backends.py  test_win32api.py  test_win32cred.py
(+10 files in other folders)
